# made-activity-tracker

./: .gitignore  BUILD_ENVIRONMENT.md  BUILD_STATUS.md  CLI_FALLBACK_COMPLETE.md  DEV_WORKFLOW.md  FILTERS.md  IMPLEMENTATION_STATUS.md  PHASE1_STATUS.md  PLAN.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SPECIFICATION.md  SPECIFICATION_V2.md  TASKS.md  TESTING_STRATEGY.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
amplifier-module-hooks-activity-tracker/: .gitignore  API_REFERENCE.md  GIT_PUSH_INSTRUCTIONS.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  README_TESTING.md  TESTING_COMPLETE.md  TEST_RESULTS_FINAL.md  check_tests.py  push_to_github.py  pyproject.toml  run_tests.bat  run_tests.py  setup_and_test.py  validate_implementation.py
amplifier-module-hooks-activity-tracker/amplifier_module_hooks_activity_tracker/: __init__.py  analyzer.py  embedding_cache.py  embedding_generator.py  hooks.py  project_group_manager.py  utils.py
amplifier-module-hooks-activity-tracker/examples/: multi-repo-settings.yaml  profile-with-activity-tracker.md
amplifier-module-hooks-activity-tracker/tests/: conftest.py
amplifier-module-hooks-activity-tracker/tests/helpers/: __init__.py  example_usage.py  llm_mock_generator.py  llm_test_helper.py
amplifier-module-hooks-activity-tracker/tests/integration/: test_full_workflow.py
amplifier-module-hooks-activity-tracker/tests/unit/: test_analyzer.py  test_analyzer_simple.py  test_analyzer_with_llm_mocks.py  test_embedding_cache.py  test_embedding_generator.py  test_embedding_generator_simple.py  test_hooks.py  test_init.py  test_init_simple.py  test_project_group_manager.py  test_project_group_manager_simple.py  test_utils.py
scripts/: setup-python.ps1  setup-python.sh
specs/: AI_CHAT_PANEL.md  AI_CHAT_PANEL_IMPLEMENTATION_REVISED.md  COMPREHENSIVE_TESTING_PLAN.md  GITHUB_CLI_FALLBACK.md  PHASE2_PROGRESS.md  PHASE2_STATUS.md  PROJECT_DEEP_DIVE.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  TROUBLESHOOTING.md  USER_CENTRIC_VIEW.md  amplifier_impact_analysis_updated.html  dashboard_metrics_data_analysis.md  dashboard_metrics_integration_spec.md  frontend_implementation_summary.md  pr_based_metrics_implementation_summary.md  rust-sync-refresh.md
src/: App.tsx  index.css
src-tauri/: .ignore  API_MIGRATION.md  Cargo.toml  Cargo.toml.fixed  tauri.conf.json  tauri.conf.json.fixed
src-tauri/.cargo/: config.toml
src-tauri/amplifier-tools/: .gitignore  README.md  TEST_INSTRUCTIONS.md  TEST_INSTRUCTIONS_WSL.md  bundle.md  pyproject.toml  quick_validate.py  run_tests.py  test_bundle.py  test_import.py  test_server_startup.py  test_setup.py  test_tools.py
src-tauri/amplifier-tools/providers/: anthropic.yaml  openai.yaml
src-tauri/amplifier-tools/src/made_activity_tools/: __init__.py  activity_tracking_tools.py  db_connection.py  metrics_tool.py  search_tool.py  server.py  tool_module.py  user_activity_tool.py
src-tauri/examples/: query_users.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: client.rs  commands.rs  mod.rs  sidecar.rs  types.rs
src-tauri/src/config/: commands.rs  mod.rs
src-tauri/src/db/: commands.rs  metrics_queries.rs  migrations.rs  mod.rs  models.rs  project_queries.rs  queries.rs  user_queries.rs
src-tauri/src/embeddings/: generator.rs  mod.rs
src-tauri/src/github/: auth.rs  cli.rs  commands.rs  graphql.rs  mod.rs  rest_api.rs  sync.rs  sync_user.rs
src-tauri/src/metrics/: business_days.rs  calculator.rs  commands.rs  filter_params.rs  mod.rs
src-tauri/src/project/: commands.rs
src-tauri/src/search/: commands.rs  duplicates.rs  hybrid.rs  mod.rs  vector_store.rs
src-tauri/src/team/: commands.rs
src/components/: Layout.tsx  PRBasedDashboard.example.tsx
src/components/ai/: ApiKeySetup.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ChatSuggestions.tsx
src/components/charts/: MetricsTrendChart.tsx  index.ts
src/components/common/: DateRangeFilter.tsx
src/components/filters/: DateRangeFilter.tsx  RepositoryFilter.tsx  SquadFilter.tsx  UserFilter.tsx  index.ts
src/hooks/: index.ts  usePRMetrics.ts
src/pages/: Dashboard.tsx  Login.tsx  ProjectDeepDive.tsx  Projects.tsx  Roadmap.tsx  Search.tsx  Settings.tsx  TeamView.tsx  UserDetail.tsx
src/stores/: authStore.ts  chatStore.ts  configStore.ts  dashboardFilterStore.ts  syncStore.ts
src/types/: ai.ts  filters.ts  index.ts  metrics.ts
src/utils/: export.ts
tests/: README.md
tests/e2e/: playwright.config.ts
tests/frontend/: setup.ts
tests/rust/: test_utils.rs
(+62 files in other folders)
