[project]
name = "made-activity-tools"
version = "0.1.0"
description = "Custom Amplifier tools for MADE Activity Tracker"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core",
    "amplifier-foundation @ git+https://github.com/microsoft/amplifier-foundation",
    "amplifier-module-provider-anthropic @ git+https://github.com/microsoft/amplifier-module-provider-anthropic",
    "amplifier-module-provider-openai @ git+https://github.com/microsoft/amplifier-module-provider-openai",
    "anthropic>=0.18.0",
    "flask[async]>=3.0.0",
    "flask-cors>=4.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/made_activity_tools"]
